[gd_scene load_steps=4 format=2]

[ext_resource path="res://entities/enemies/Enemy.gd" type="Script" id=1]
[ext_resource path="res://entities/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/enemies/EnemyStats.tscn" type="PackedScene" id=3]

[node name="Enemy" type="KinematicBody2D"]
modulate = Color( 1, 0, 0, 1 )
collision_layer = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="EnemyStats" parent="." instance=ExtResource( 3 )]

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 16

[node name="Collider" type="CollisionShape2D" parent="."]

[node name="Wall" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -6, 0 )

[node name="WallRight" type="RayCast2D" parent="."]
cast_to = Vector2( 6, 0 )

[node name="FloorLeft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 6 )

[node name="FloorRight" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 6 )

[node name="AutoShoot" type="Timer" parent="."]
[connection signal="enemy_died" from="EnemyStats" to="." method="_on_EnemyStats_enemy_died"]
[connection signal="hit" from="Hurtbox" to="." method="_on_Hurtbox_hit"]
